# CLion-Tesseract-Testing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
